[tool.poetry]
name = "e-lib"
version = "0.1.0"
description = ""
authors = ["G0shan4ik <egorkononec64@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.50.0"
twocaptcha = "^0.0.1"
bs4 = "^0.0.2"
diskcache = "^5.6.3"
loguru = "^0.7.3"
aiofiles = "^24.1.0"


[tool.poetry.scripts]
dev = "main:start_dev"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
